<resources>
    <string name="app_name">Trello</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="get_more_done">Get more done with trello</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="add_member">Add Member</string>
    <string name="user_create_success">Account created successfully</string>
    <string name="board_create_success">Board created successfully</string>
    <string name="failed_to_create_board">Failed to create board</string>
    <string name="failed_to_fetch_data">Failed to fetch data</string>
    <string name="create">Create</string>
    <string name="empty_board_lit">No board available!</string>
    <string name="add_list">Add List</string>
    <string name="user_login_success">Logged in successfully</string>
    <string name="some_thing_went_wrong">Some thing wen\'t wrong</string>
    <string name="empty_name_error">Name can\'t be empty</string>
    <string name="empty_email_error">Email can\'t be empty</string>
    <string name="image_empty_error">"Please select an image"</string>
    <string name="invalid_email_error">Invalid email</string>
    <string name="invalid_phone_error">Invalid phone number</string>
    <string name="empty_password_error">Password length should be at least @1</string>
    <string name="failed_to_create_user">Failed to create user</string>
    <string name="failed_to_add_member">Failed to add member</string>
    <string name="member_added_success">Successfully added member</string>
    <string name="press_again_exit">Press again to exit</string>
    <string name="name">Name</string>
    <string name="board_name">Board Name</string>
    <string name="member_email">Member Email</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="boards">Boards</string>
    <string name="board">Board</string>
    <string name="boards_create_error">Failed to create board</string>
    <string name="logout">Logout</string>
    <string name="my_profile">My Profile</string>
    <string name="task_creation_failed">Failed to create task</string>
    <string name="task_update_failed">Failed to update task</string>
    <string name="task_created">Task created successfully</string>
    <string name="task_updated">Task updated successfully</string>
    <string name="task_delete_failed">Failed to delete task</string>
    <string name="task_delete">Task delete</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="profile_updated">Profile updated</string>
    <string name="profile_update_failed">Failed to update profile</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="auth_desc">Plan, track and organize pretty much anything\n with anyone</string>
    <string name="reset">Reset</string>
    <string name="permission">Permission</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="permission_rational_message">Storage permission is required to access your images.\nClick Setting to turn it on.</string>
    <string name="setting">Settings</string>
    <string name="by">By :</string>
    <string name="list_title">List Title</string>
    <string name="card_title">Card Title</string>
    <string name="members">Members</string>
    <string name="list_title_desc">Add List Title</string>
    <string name="add_card">Add Card</string>
    <string name="empty_title_error">Title cannot be empty</string>
    <string name="empty_card_name_error">Card name cannot be empty</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="delete_task">Delete Task</string>
    <string name="delete_task_desc">Confirming this will permanently delete the task.</string>
    <string name="default_notification_channel_id">trello_notification_channel_id</string>

</resources>