<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="@dimen/cardview_default_elevation"
    android:layout_margin="@dimen/common_margin_6"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="true"
        >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/common_margin_24"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_list_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/add_list"
            android:textColor="@color/white"
            android:textAllCaps="true"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/list_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_between_edt"
            android:accessibilityLiveRegion="polite"
            android:contentDescription="@string/list_title"
            android:labelFor="@id/list_title_edt"
            app:endIconCheckable="true"
            app:endIconDrawable="@drawable/baseline_check_24"
            app:endIconTint="?attr/colorPrimary"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_list_btn"
            app:startIconCheckable="true"
            app:startIconDrawable="@drawable/baseline_close_24"
            app:endIconMode="custom"
            app:startIconTint="?attr/colorPrimary">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/list_title_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/list_title"
                android:inputType="text"
                android:labelFor="@id/list_title_layout"
                android:textSize="@dimen/text_medium_15" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/list_title_txt"
            android:layout_width="0dp"
            android:layout_height="@dimen/single_line_text_view_height"
            android:layout_marginTop="@dimen/common_margin_between_edt"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_medium_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_title_layout"
            app:layout_constraintEnd_toStartOf="@id/edit_title_btn"
            android:maxLines="1"
            />

        <ImageButton
            android:id="@+id/edit_title_btn"
            android:layout_width="40dp"
            android:layout_height="@dimen/single_line_text_view_height"
            android:layout_marginTop="@dimen/common_margin_between_edt"
            app:layout_constraintEnd_toStartOf="@id/delete_list_btn"
            app:layout_constraintStart_toEndOf="@+id/list_title_txt"
            app:layout_constraintTop_toBottomOf="@+id/list_title_layout"
            android:layout_marginStart="@dimen/common_margin_6"
            android:backgroundTint="?attr/colorPrimary"
            android:src="@drawable/baseline_edit_24"
            app:tint="@color/white"
            android:scaleType="center"
            android:padding="6dp"
            />
        <ImageButton
            android:id="@+id/delete_list_btn"
            android:layout_width="40dp"
            android:layout_height="@dimen/single_line_text_view_height"
            android:layout_marginTop="@dimen/common_margin_between_edt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edit_title_btn"
            app:layout_constraintTop_toBottomOf="@+id/list_title_layout"
            android:layout_marginStart="@dimen/common_margin_6"
            android:backgroundTint="?attr/colorError"
            android:src="@drawable/baseline_delete_24"
            app:tint="@color/white"
            android:scaleType="center"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/card_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/list_title_txt"
            android:layout_marginTop="@dimen/common_margin_between_edt"
            android:nestedScrollingEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/add_card_edt_layout"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_card_edt_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_between_edt"
            android:accessibilityLiveRegion="polite"
            android:contentDescription="@string/list_title"
            android:labelFor="@id/list_title_edt"
            app:endIconCheckable="true"
            app:endIconDrawable="@drawable/baseline_check_24"
            app:endIconTint="?attr/colorPrimary"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_list"
            app:startIconCheckable="true"
            app:startIconDrawable="@drawable/baseline_close_24"
            app:startIconTint="?attr/colorPrimary"
            app:endIconMode="custom"
            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/add_card_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_title"
                android:inputType="text"
                android:labelFor="@id/add_card_edt_layout"
                android:textSize="@dimen/text_medium_15" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_card_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_card_edt_layout"
            android:text="@string/add_card"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/common_margin_between_edt"
            />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/list_title_grp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="list_title_txt,edit_title_btn,delete_list_btn"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>